force-app/main/default/objects/Review_Form_Component__c/Review_Form_Component__c.object-meta.xml
<CustomObject>
    <description>Represents a component used by a review form for field entry</description>
    <label>Review Form Component</label>
    <nameField>
        <displayFormat>RFC-{000000}</displayFormat>
        <label>Review Form Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Form Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>