force-app/main/default/objects/Review_Form_Component__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this review form component is in use</description>
    <inlineHelpText>Checked if this review form component is in use</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>