force-app/main/default/objects/Review_Form_Component__c/fields/Enable_before_form_submitted__c.field-meta.xml
<CustomField>
    <fullName>Enable_before_form_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then this component is enabled and may be edited before its form (e.g. Proposal) has been submitted</description>
    <inlineHelpText>If checked, then this component is enabled and may be edited before its form (e.g. Proposal) has been submitted</inlineHelpText>
    <label>Enable before form submitted</label>
    <type>Checkbox</type>
</CustomField>