force-app/main/default/objects/Review_Form_Component__c/fields/Field_name__c.field-meta.xml
<CustomField>
    <fullName>Field_name__c</fullName>
    <description>The name of the field to which this component applies (should be the field&apos;s &quot;API name&quot;)</description>
    <inlineHelpText>The name of the field to which this component applies (should be the field&apos;s &quot;API name&quot;)</inlineHelpText>
    <label>Field name</label>
    <type>TextArea</type>
</CustomField>