force-app/main/default/objects/Review_Form_Component__c/fields/Help_text__c.field-meta.xml
<CustomField>
    <fullName>Help_text__c</fullName>
    <description>The help or &quot;hover&quot; text for this field component</description>
    <inlineHelpText>The help or &quot;hover&quot; text for this field component</inlineHelpText>
    <label>Help text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>