force-app/main/default/objects/Review_Form_Component__c/fields/Indicator_outcome_type__c.field-meta.xml
<CustomField>
    <fullName>Indicator_outcome_type__c</fullName>
    <description>The outcome type of the indicators represented in this indicator group</description>
    <inlineHelpText>The outcome type of the indicators represented in this indicator group</inlineHelpText>
    <label>Indicator outcome type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indicator_outcome_types</valueSetName>
    </valueSet>
</CustomField>