force-app/main/default/objects/Review_Form_Component__c/fields/Join_object_name__c.field-meta.xml
<CustomField>
    <fullName>Join_object_name__c</fullName>
    <description>The name of the join object for this multi-select picklist (use &quot;API name&quot;)</description>
    <inlineHelpText>The name of the join object for this multi-select picklist (use &quot;API name&quot;)</inlineHelpText>
    <label>Join object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>