force-app/main/default/objects/Review_Form_Component__c/fields/Join_object_type__c.field-meta.xml
<CustomField>
    <fullName>Join_object_type__c</fullName>
    <description>The value of the Type field used to filter the join records for this multi-select picklist field</description>
    <inlineHelpText>The value of the Type field used to filter the join records for this multi-select picklist field</inlineHelpText>
    <label>Join object type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>