force-app/main/default/objects/Review_Form_Component__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The label for this field component</description>
    <inlineHelpText>The label for this field component</inlineHelpText>
    <label>Label</label>
    <type>TextArea</type>
</CustomField>