force-app/main/default/objects/Review_Form_Component__c/fields/Lightning_component_name__c.field-meta.xml
<CustomField>
    <fullName>Lightning_component_name__c</fullName>
    <description>The name of the lightning component used to instantiate this field in a review interface</description>
    <inlineHelpText>The name of the lightning component used to instantiate this field in a review interface</inlineHelpText>
    <label>Lightning component name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HeadingMedium</fullName>
            </value>
            <value>
                <fullName>HeadingSmall</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>InputCheckbox</fullName>
            </value>
            <value>
                <fullName>InputSelect</fullName>
            </value>
            <value>
                <fullName>InputSelectLookup</fullName>
            </value>
            <value>
                <fullName>InputSelectMulti</fullName>
            </value>
            <value>
                <fullName>InputSelectMulti1</fullName>
            </value>
            <value>
                <fullName>InputTextarea</fullName>
            </value>
            <value>
                <fullName>InputText</fullName>
            </value>
            <value>
                <fullName>InputTextReadonly</fullName>
            </value>
            <value>
                <fullName>InputNumber</fullName>
            </value>
            <value>
                <fullName>IndicatorGroup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>