force-app/main/default/objects/Review_Form_Component__c/fields/Object_name__c.field-meta.xml
<CustomField>
    <fullName>Object_name__c</fullName>
    <description>The name of the Salesforce object to which this component applies (should be the &quot;API name&quot;)</description>
    <inlineHelpText>The name of the Salesforce object to which this component applies (should be the &quot;API name&quot;)</inlineHelpText>
    <label>Object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>