force-app/main/default/objects/Review_Form_Component__c/fields/Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Placeholder__c</fullName>
    <description>The placeholder text for this field component (only relevant for text fields)</description>
    <inlineHelpText>The placeholder text for this field component (only relevant for text fields)</inlineHelpText>
    <label>Placeholder</label>
    <type>TextArea</type>
</CustomField>