force-app/main/default/objects/Review_Form_Component__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this field must be entered in order to submit the review</description>
    <inlineHelpText>Checked if this field must be entered in order to submit the review</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>