force-app/main/default/objects/Review_Form_Component__c/fields/Review_Form__c.field-meta.xml
<CustomField>
    <fullName>Review_Form__c</fullName>
    <description>The review form to which this component belongs</description>
    <inlineHelpText>The review form to which this component belongs</inlineHelpText>
    <label>Review Form</label>
    <referenceTo>Review_Form__c</referenceTo>
    <relationshipLabel>Review Form Components</relationshipLabel>
    <relationshipName>Review_Form_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>