force-app/main/default/objects/Review_Form_Component__c/fields/Sort_number__c.field-meta.xml
<CustomField>
    <fullName>Sort_number__c</fullName>
    <description>This number determines where this component is inserted in the overall form</description>
    <inlineHelpText>This number determines where this component is inserted in the overall form</inlineHelpText>
    <label>Sort number</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>